Added new logiv to remove the rows that doesn't have the same number of spaces (not qualified players for the analysis)

--- a/Code/projects/baseball_analytics/Sandbox/dev_main.ipynb
+++ b/Code/projects/baseball_analytics/Sandbox/dev_main.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b6d67664",
    "metadata": {},
    "outputs": [
@@ -1010,12 +1010,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "URL: https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=plato%7Cvs%20LHP%7CNYY%7C2025%7Cbat%7CAB%7C\n",
-      "Table team_split1 (LHP vs NYY) loaded successfully.\n",
-      "URL: https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=plato%7Cvs%20RHP%7CNYY%7C2025%7Cbat%7CAB%7C\n",
-      "Table team_split1 (RHP vs NYY) loaded successfully.\n",
-      "URL: https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=plato%7Cvs%20LH%20Starter%7CNYY%7C2025%7Cbat%7CAB%7C\n",
-      "Table team_split1 (LH vs NYY) loaded successfully.\n"
+      "URL: https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=leado%7C1st%20Batter%20G%7CNYY%7C2025%7Cbat%7CAB%7C\n",
+      "Table team_split1 (1st%20Batter vs NYY) loaded successfully.\n"
      ]
     }
    ],
@@ -1054,7 +1050,8 @@
     "        or split_type == 'DH' or split_type == 'PH': # for each position\n",
     "        url = f\"https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=defp%7Cas%20{split_type}%7C{team_abv}%7C{year}%7Cbat%7CAB%7C\"\n",
     "    \n",
-    "    \n",
+    "    elif split_type == '1st%20Batter':\n",
+    "        url = f\"https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=leado%7C{split_type}%20G%7C{team_abv}%7C{year}%7Cbat%7CAB%7C\"\n",
     "    \n",
     "    \n",
     "    \n",
@@ -1122,8 +1119,8 @@
     "    # ... (Your cleanup logic for clean_mode 0 or 1 remains here) ...\n",
     "    # This is where the complex splitting, renaming, and removal happens.\n",
     "    if clean_mode == 1:\n",
-    "        #Remove 'Roe' (case-sensitive) since it is empty\n",
-    "        df[0] = df[0].str.replace('GS', '', regex=False)\n",
+    "        #Remove 'GS' from the first row since it is empty\n",
+    "        df.loc[0, 0] = df.loc[0, 0].replace('GS', '')\n",
     "        \n",
     "        # Define the correct headers\n",
     "        all_headers = [\n",
@@ -1137,6 +1134,20 @@
     "        all_headers = [\n",
     "        'Name', 'G', 'GS', 'PA', 'AB', 'R', 'H', '2B', '3B', 'HR', 'RBI',\n",
     "        'SB', 'CS', 'BB', 'SO', 'BA', 'OBP', 'SLG', 'OPS', 'TB', 'GDBP',\n",
+    "        'HBP', 'SH', 'SF', 'IBB', 'ROE', 'BABIP', 'tOPS+', 'sOPS+'\n",
+    "        ]\n",
+    "\n",
+    "    elif clean_mode == 3:\n",
+    "        #Remove some empty values from the first row\n",
+    "        df.loc[0, 0] = df.loc[0, 0].replace('GS', '')\n",
+    "        df.loc[0, 0] = df.loc[0, 0].replace('R', '')\n",
+    "        df.loc[0, 0] = df.loc[0, 0].replace('SB', '')\n",
+    "        df.loc[0, 0] = df.loc[0, 0].replace('CS', '')\n",
+    "        \n",
+    "        # Define the correct headers\n",
+    "        all_headers = [\n",
+    "        'Name', 'G', 'PA', 'AB', 'H', '2B', '3B', 'HR', 'RBI',\n",
+    "        'BB', 'SO', 'BA', 'OBP', 'SLG', 'OPS', 'TB', 'GDBP',\n",
     "        'HBP', 'SH', 'SF', 'IBB', 'ROE', 'BABIP', 'tOPS+', 'sOPS+'\n",
     "        ]\n",
     "        \n",
@@ -1157,7 +1168,45 @@
     "\n",
     "    # Extract the two parts into new columns:\n",
     "    df[['Rk_Name_Combined', 'Stats_Combined']] = df[0].str.extract(regex_pattern, expand=True)\n",
+    "    \n",
+    "    # Remove the first row\n",
+    "    df = df.iloc[1:]\n",
+    "    \n",
+    "    # NEW LOGIC: VERIFY AND DROP NON-CONFORMING STATS ROWS ---\n",
     "\n",
+    "    # 1. Calculate the number of spaces (separators) in each row\n",
+    "    space_counts = df['Stats_Combined'].str.count(' ')\n",
+    "\n",
+    "    # 2. Find the maximum number of spaces, which defines the expected structure\n",
+    "    max_spaces = space_counts.max()\n",
+    "\n",
+    "    print(f\"Maximum spaces (expected separators): {max_spaces}\")\n",
+    "\n",
+    "    # 1. Calculate the number of spaces (separators) in each row\n",
+    "    space_counts = df['Stats_Combined'].str.count(' ')\n",
+    "\n",
+    "    # 2. Find the maximum number of spaces, which defines the expected structure\n",
+    "    max_spaces = space_counts.max()\n",
+    "\n",
+    "    print(f\"Maximum spaces (expected separators): {max_spaces}\")\n",
+    "\n",
+    "    # 3. Identify the indices of the rows that do NOT have the maximum number of spaces\n",
+    "    indices_to_drop = space_counts[space_counts < max_spaces].index\n",
+    "\n",
+    "    # 4. Check if any rows need to be dropped\n",
+    "    if indices_to_drop.empty:\n",
+    "        print(\"All rows have a consistent number of spaces. Proceeding with split.\")\n",
+    "    else:\n",
+    "        num_dropped = len(indices_to_drop)\n",
+    "        \n",
+    "        # 5. Drop the rows that do not match the expected structure\n",
+    "        df = df.drop(index=indices_to_drop)\n",
+    "        \n",
+    "        # Reset the index after dropping rows\n",
+    "        df = df.reset_index(drop=True)\n",
+    "        \n",
+    "        print(f\"Removed {num_dropped} row(s) because they did not have the expected number of spaces ({max_spaces}).\")    \n",
+    "    \n",
     "    # 3. Split the 'Stats_Combined' column on all spaces\n",
     "    # The Name is now safe, and the stats are simple space-separated values.\n",
     "    stats_split = df['Stats_Combined'].str.split(expand=True)\n",
@@ -1168,9 +1217,6 @@
     "        df['Rk_Name_Combined'], # The Name/Rank column\n",
     "        stats_split             # All the statistical columns\n",
     "    ], axis=1)\n",
-    "\n",
-    "    # Remove the first row\n",
-    "    final_df = final_df.iloc[1:]\n",
     "\n",
     "    # --- Final Cleanup (Optional, but recommended) ---\n",
     "    # Separate the Rk from the Name in the first column for a cleaner table.\n",
@@ -1192,8 +1238,9 @@
     "# --- EXECUTION ---\n",
     "#team_abbreviations = ['NYY', 'BOS', 'TBR', 'TOR', 'BAL'] # Use a small list for testing\n",
     "team_abbreviations = ['NYY'] # Use a small list for testing\n",
-    "clean_mode_one = []\n",
-    "clean_mode_two = []\n",
+    "clean_mode_one   = []\n",
+    "clean_mode_two   = []\n",
+    "clean_mode_three = []\n",
     "\n",
     "def create_and_append_table(df_source, split_type, team_abv, df_clean_mode):\n",
     "    \"\"\"Creates and appends a table with split type and team abbreviation.\n",
@@ -1296,9 +1343,222 @@
     "        \n",
     "    df_pinch_hitter = players_split(split_type='PH', team_abv=team_abv, clean_mode= 1)\n",
     "    create_and_append_table(df_pinch_hitter, 'pinch_hitter', team_abv, clean_mode_one)\n",
+    "    \n",
+    "    # LEADING OFF INNING\n",
+    "    df_first_batter_of_the_game = players_split(split_type='1st%20Batter', team_abv=team_abv, clean_mode= 3)\n",
+    "    create_and_append_table(df_first_batter_of_the_game, 'first_batter_of_game', team_abv, clean_mode_three)\n",
     "\n",
-    "final_clean_mode_one = pd.concat(clean_mode_one, ignore_index=True)\n",
-    "final_clean_mode_two = pd.concat(clean_mode_two, ignore_index=True)"
+    "final_clean_mode_one   = pd.concat(clean_mode_one,   ignore_index=True)\n",
+    "final_clean_mode_two   = pd.concat(clean_mode_two,   ignore_index=True)\n",
+    "final_clean_mode_three = pd.concat(clean_mode_three, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae05267b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "URL: https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=leado%7C1st%20Batter%20G%7CNYY%7C2025%7Cbat%7CAB%7C\n",
+      "Table team_split1 (1st%20Batter vs NYY) loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# --- 1. SETUP (Only here because the logic is complex) ---\n",
+    "options = Options()\n",
+    "options.add_argument(\"--headless\")\n",
+    "options.binary_location = \"C:\\\\Program Files\\\\BraveSoftware\\\\Brave-Browser\\\\Application\\\\brave.exe\"\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "year = datetime.now().year\n",
+    "datatable_id = 'team_split1'\n",
+    "clean_mode = 3\n",
+    "\n",
+    "split_type = '1st%20Batter'\n",
+    "team_abv   = 'NYY'\n",
+    "# --- 2. URL CONSTRUCTION ---\n",
+    "if split_type == '1st%20Batter':\n",
+    "    url = f\"https://www.baseball-reference.com/tools/split_stats_team.cgi?full=1&params=leado%7C{split_type}%20G%7C{team_abv}%7C{year}%7Cbat%7CAB%7C\"\n",
+    "\n",
+    "driver.get(url)\n",
+    "\n",
+    "# --- 3. WAIT AND EXTRACT ---\n",
+    "datatable_xpath = f\"//table[@id='{datatable_id}']\"\n",
+    "try:\n",
+    "    WebDriverWait(driver, 60).until(\n",
+    "        EC.presence_of_element_located((By.XPATH, datatable_xpath))\n",
+    "    )\n",
+    "    print(f\"URL: {url}\")\n",
+    "    print(f\"Table {datatable_id} ({split_type} vs {team_abv}) loaded successfully.\")\n",
+    "\n",
+    "    table_element = driver.find_element(By.XPATH, datatable_xpath)\n",
+    "    text_content = table_element.text\n",
+    "    \n",
+    "finally:\n",
+    "    driver.quit() # Close the driver in a finally block to ensure it closes\n",
+    "    \n",
+    "# --- 4. DATA PROCESSING (Keep this logic) ---\n",
+    "rows = text_content.split(\"\\n\")\n",
+    "table_data = [row.split(\"\\t\") for row in rows]\n",
+    "df = pd.DataFrame(table_data)\n",
+    "\n",
+    "# ... (Your cleanup logic for clean_mode 0 or 1 remains here) ...\n",
+    "# This is where the complex splitting, renaming, and removal happens.\n",
+    "if clean_mode == 3:\n",
+    "    #Remove some empty values from the first row\n",
+    "    df.loc[0, 0] = df.loc[0, 0].replace('GS', '')\n",
+    "    df.loc[0, 0] = df.loc[0, 0].replace('R', '')\n",
+    "    df.loc[0, 0] = df.loc[0, 0].replace('SB', '')\n",
+    "    df.loc[0, 0] = df.loc[0, 0].replace('CS', '')\n",
+    "    \n",
+    "    # Define the correct headers\n",
+    "    all_headers = [\n",
+    "    'Name', 'G', 'PA', 'AB', 'H', '2B', '3B', 'HR', 'RBI',\n",
+    "    'BB', 'SO', 'BA', 'OBP', 'SLG', 'OPS', 'TB', 'GDBP',\n",
+    "    'HBP', 'SH', 'SF', 'IBB', 'ROE', 'BABIP', 'tOPS+', 'sOPS+'\n",
+    "    ]\n",
+    "    \n",
+    "# Remove last row\n",
+    "df = df.iloc[:-1]\n",
+    "\n",
+    "# Remove rows where column 'A' contains 'Rk', but keep the first row\n",
+    "#df = df[~((df.index > 0) & (df[0].str.contains('Rk', na=False)))]\n",
+    "\n",
+    "# 2. Use Regex to split the column into exactly two parts: Name/Rk and everything else (the stats)\n",
+    "# Regex Pattern Breakdown:\n",
+    "# (^.*?)      -> Capturing Group 1: Match and capture everything from the start (^) non-greedily (.*?)\n",
+    "# (\\s\\d+)     -> The split transition: Look for a space (\\s) followed immediately by a digit (\\d+).\n",
+    "#               This finds the first number after the name.\n",
+    "#               Crucially, we DON'T include this space-plus-digit in Group 1.\n",
+    "# (.*$)       -> Capturing Group 2: Match and capture everything from that point until the end ($).\n",
+    "regex_pattern = r\"^(.*?)\\s(\\d+.*$)\"\n",
+    "\n",
+    "# Extract the two parts into new columns:\n",
+    "df[['Rk_Name_Combined', 'Stats_Combined']] = df[0].str.extract(regex_pattern, expand=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "2fb5320e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Remove the first row\n",
+    "df = df.iloc[1:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96d082d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum spaces (expected separators): 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# NEW LOGIC: VERIFY AND DROP NON-CONFORMING STATS ROWS ---\n",
+    "\n",
+    "# 1. Calculate the number of spaces (separators) in each row\n",
+    "space_counts = df['Stats_Combined'].str.count(' ')\n",
+    "\n",
+    "# 2. Find the maximum number of spaces, which defines the expected structure\n",
+    "max_spaces = space_counts.max()\n",
+    "\n",
+    "print(f\"Maximum spaces (expected separators): {max_spaces}\")\n",
+    "\n",
+    "# 1. Calculate the number of spaces (separators) in each row\n",
+    "space_counts = df['Stats_Combined'].str.count(' ')\n",
+    "\n",
+    "# 2. Find the maximum number of spaces, which defines the expected structure\n",
+    "max_spaces = space_counts.max()\n",
+    "\n",
+    "print(f\"Maximum spaces (expected separators): {max_spaces}\")\n",
+    "\n",
+    "\n",
+    "# 3. Identify the indices of the rows that do NOT have the maximum number of spaces\n",
+    "indices_to_drop = space_counts[space_counts < max_spaces].index\n",
+    "\n",
+    "# 4. Check if any rows need to be dropped\n",
+    "if indices_to_drop.empty:\n",
+    "    print(\"All rows have a consistent number of spaces. Proceeding with split.\")\n",
+    "else:\n",
+    "    num_dropped = len(indices_to_drop)\n",
+    "    \n",
+    "    # 5. Drop the rows that do not match the expected structure\n",
+    "    df = df.drop(index=indices_to_drop)\n",
+    "    \n",
+    "    # Reset the index after dropping rows\n",
+    "    df = df.reset_index(drop=True)\n",
+    "    \n",
+    "    print(f\"Removed {num_dropped} row(s) because they did not have the expected number of spaces ({max_spaces}).\")\n",
+    "    \n",
+    "# --- END OF NEW LOGIC ---\n",
+    "\n",
+    "# Now the 'Stats_Combined' column in 'df' only contains rows that are guaranteed\n",
+    "# to have the correct number of data points for the final split.\n",
+    "\n",
+    "# Continue with the rest of your splitting process:\n",
+    "# stats_split = df['Stats_Combined'].str.split(expand=True)\n",
+    "# ... and the rest of your cleanup/concat logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "fec282d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 3. Split the 'Stats_Combined' column on all spaces\n",
+    "# The Name is now safe, and the stats are simple space-separated values.\n",
+    "stats_split = df['Stats_Combined'].str.split(expand=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "168eefde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 4. Combine the Name/Rank column with the split statistics\n",
+    "# We use iloc to get the columns we want.\n",
+    "final_df = pd.concat([\n",
+    "    df['Rk_Name_Combined'], # The Name/Rank column\n",
+    "    stats_split             # All the statistical columns\n",
+    "], axis=1)\n",
+    "\n",
+    "# Remove the first row\n",
+    "final_df = final_df.iloc[1:]\n",
+    "\n",
+    "# --- Final Cleanup (Optional, but recommended) ---\n",
+    "# Separate the Rk from the Name in the first column for a cleaner table.\n",
+    "final_df[['Rk', 'Name']] = final_df['Rk_Name_Combined'].str.split(' ', n=1, expand=True)\n",
+    "final_df = final_df.drop(columns=['Rk_Name_Combined', 'Rk'])\n",
+    "\n",
+    "# Move the last column to be the first column (Name)\n",
+    "final_df = final_df[['Name'] + [col for col in final_df.columns if col != 'Name']]\n",
+    "\n",
+    "# 5. Apply the headers\n",
+    "final_df.columns = all_headers\n",
+    "\n",
+    "\n"
    ]
   }
  ],
