(update): created the dim_pitcher_achetype table and the function to update the fact_statcast_pitches table

--- a/Code/projects/baseball_analytics/Sandbox/dev_main.ipynb
+++ b/Code/projects/baseball_analytics/Sandbox/dev_main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "id": "37b6a471",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,10 @@
     "import re\n",
     "import numpy as np\n",
     "from io import StringIO\n",
-    "import pylahman\n"
+    "import pylahman\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
@@ -952,6 +955,41 @@
     "\n",
     "    # Apply the function\n",
     "    load_fact_statcast_events(engine, fact_statcast_pitches_last_n_days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79a30db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the max date in the fact_statcast_pitches\n",
+    "def get_latest_date_from_db():\n",
+    "    query = text(\"SELECT MAX(game_date) FROM fact_statcast_pitches\")\n",
+    "    \n",
+    "    with engine.connect() as conn:\n",
+    "        result = conn.execute(query).scalar()\n",
+    "        \n",
+    "    return result\n",
+    "\n",
+    "# Execute and calculate fetch window\n",
+    "last_date = get_latest_date_from_db()\n",
+    "\n",
+    "if last_date:\n",
+    "    # I want to start fetching from the day AFTER the last recorded date\n",
+    "    fetch_start = (last_date + timedelta(days=1)).strftime('%Y-%m-%d')\n",
+    "    # Fetch up to yesterday\n",
+    "    fetch_end = (date.today() - timedelta(days=1)).strftime('%Y-%m-%d')\n",
+    "    \n",
+    "    if fetch_start <= fetch_end:\n",
+    "        print(f\"🔄 Last data was {last_date}. Fetching from {fetch_start} to {fetch_end}...\")\n",
+    "        new_data = pyb.statcast(start_dt=fetch_start, end_dt=fetch_end)\n",
+    "        new_data.to_sql('fact_statcast_pitches', engine, if_exists='append', index=False)\n",
+    "    else:\n",
+    "        print(\"✅ Database is already up to date.\")\n",
+    "else:\n",
+    "    print(\"Empty table. You need to run an initial seed fetch.\")\n"
    ]
   },
   {
@@ -2680,6 +2718,112 @@
     "    print(\"✅ All columns are clean. No nulls found!\")\n",
     "else:\n",
     "    print(f\"⚠️ Warning: {total_nulls} nulls still remain some columns.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0cff595",
+   "metadata": {},
+   "source": [
+    "### Create model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94bebb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ dim_pitcher_archetypes updated! Primary Key was preserved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#def update_dim_pitcher_archetypes(engine: Engine):\n",
+    "\"\"\"\n",
+    "Groups pitchers into 8 archetypes and updates the database.\n",
+    "Now includes an 'updated_at' column to track the last run date.\n",
+    "\"\"\"\n",
+    "\n",
+    "# 1. Pull unique pitcher stats\n",
+    "query = \"\"\"\n",
+    "SELECT \n",
+    "    pitcher,\n",
+    "    AVG(release_speed) as avg_velo, \n",
+    "    AVG(release_spin_rate) as avg_spin, -- The spin rate of a pitch measured in revolutions per minute (rpm) at the moment of release\n",
+    "    AVG(pfx_x) as avg_horiz_mvmt, -- Horizontal movement in feet from the catcher's perspective\n",
+    "    AVG(pfx_z) as avg_vert_mvmt -- Vertical movement from the catcher's perpsective.\n",
+    "FROM fact_statcast_pitches\n",
+    "WHERE release_speed IS NOT NULL \n",
+    "    AND release_spin_rate IS NOT NULL\n",
+    "    AND pfx_x IS NOT NULL \n",
+    "    AND pfx_z IS NOT NULL\n",
+    "GROUP BY pitcher\n",
+    "HAVING COUNT(*) > 100 \n",
+    "\"\"\"\n",
+    "pitcher_stats = pd.read_sql(query, engine)\n",
+    "\n",
+    "# 2. Scale the data\n",
+    "scaler = StandardScaler()\n",
+    "features = ['avg_velo', 'avg_spin', 'avg_horiz_mvmt', 'avg_vert_mvmt']\n",
+    "scaled_data = scaler.fit_transform(pitcher_stats[features])\n",
+    "\n",
+    "# 3. Create 8 Archetypes\n",
+    "kmeans = KMeans(n_clusters=8, random_state=42, n_init=10)\n",
+    "pitcher_stats['archetype_id'] = kmeans.fit_predict(scaled_data)\n",
+    "\n",
+    "# 4. Map IDs and Add Timestamp\n",
+    "archetype_map = {\n",
+    "    0: \"Power Flamethrower\",\n",
+    "    1: \"Sinker / Tail Specialist\",\n",
+    "    2: \"Breaking Ball Specialist\",\n",
+    "    3: \"Standard Control Righty\",\n",
+    "    4: \"Position Player / Eephus\",\n",
+    "    5: \"Deceptive Angle Specialist\",\n",
+    "    6: \"Low-Spin / Heavy Sinker\",\n",
+    "    7: \"Power Slider / Sweeper\"\n",
+    "}\n",
+    "pitcher_stats['archetype_name'] = pitcher_stats['archetype_id'].map(archetype_map)\n",
+    "\n",
+    "# Add the current timestamp to every row\n",
+    "pitcher_stats['updated_at'] = datetime.now()\n",
+    "\n",
+    "# 5. Database Update (Truncate and Append)\n",
+    "with engine.connect() as conn:\n",
+    "    try:\n",
+    "        conn.execute(text(\"TRUNCATE TABLE dim_pitcher_archetypes;\"))\n",
+    "        conn.commit()\n",
+    "        print(\"Refreshing existing dim_pitcher_archetypes table...\")\n",
+    "    except Exception:\n",
+    "        print(\"Table 'dim_pitcher_archetypes' not found. Creating it for the first time...\")\n",
+    "        conn.rollback()\n",
+    "\n",
+    "# Upload data including the new column\n",
+    "pitcher_stats[['pitcher', 'archetype_id', 'archetype_name', 'updated_at']].to_sql(\n",
+    "    'dim_pitcher_archetypes', \n",
+    "    engine, \n",
+    "    if_exists='append', \n",
+    "    index=False\n",
+    ")\n",
+    "\n",
+    "# 6. Ensure the Primary Key is set\n",
+    "pk_check = \"\"\"\n",
+    "SELECT count(*) \n",
+    "FROM information_schema.table_constraints \n",
+    "WHERE table_name='dim_pitcher_archetypes' AND constraint_type='PRIMARY KEY';\n",
+    "\"\"\"\n",
+    "with engine.connect() as conn:\n",
+    "    has_pk = conn.execute(text(pk_check)).scalar()\n",
+    "    if has_pk == 0:\n",
+    "        conn.execute(text(\"ALTER TABLE dim_pitcher_archetypes ADD PRIMARY KEY (pitcher);\"))\n",
+    "        conn.commit()\n",
+    "        print(\"✅ Primary Key (pitcher) established.\")\n",
+    "\n",
+    "print(f\"✅ Successfully categorized {len(pitcher_stats)} pitchers.\")"
    ]
   }
  ],
