Changes in standings and home for the app.
Now standing are directly connected to the MLB Stats API.

Fixed the color for the boxes at the bottom of the Home page

--- a/Code/projects/baseball_analytics/Sandbox/tuning.ipynb
+++ b/Code/projects/baseball_analytics/Sandbox/tuning.ipynb
@@ -1112,6 +1112,202 @@
     "        \n",
     "#create_dim_hitter_archetypes(engine)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "858fab06",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Add source directory to path\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m app_dir \u001b[38;5;241m=\u001b[39m Path(\u001b[38;5;18;43m__file__\u001b[39;49m)\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent\n\u001b[0;32m      9\u001b[0m source_dir \u001b[38;5;241m=\u001b[39m app_dir\u001b[38;5;241m.\u001b[39mparent\n\u001b[0;32m     10\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mstr\u001b[39m(source_dir))\n",
+      "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import streamlit as st\n",
+    "from sqlalchemy.engine import Engine\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "# Add source directory to path\n",
+    "app_dir = Path(__file__).parent.parent\n",
+    "source_dir = app_dir.parent\n",
+    "sys.path.insert(0, str(source_dir))\n",
+    "\n",
+    "from connection_engine import create_connection_postgresql\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load environment variables - check multiple locations\n",
+    "env_paths = [\n",
+    "    source_dir / \"utils\" / \".env\",  # Original location: Source/utils/.env\n",
+    "    app_dir / \"utils\" / \".env\",      # App location: Source/app/utils/.env\n",
+    "    source_dir / \".env\"              # Fallback: Source/.env\n",
+    "]\n",
+    "\n",
+    "env_loaded = False\n",
+    "for env_path in env_paths:\n",
+    "    if env_path.exists():\n",
+    "        load_dotenv(dotenv_path=str(env_path), override=True)\n",
+    "        env_loaded = True\n",
+    "        break\n",
+    "\n",
+    "# If no .env file found, try default load_dotenv (current directory)\n",
+    "if not env_loaded:\n",
+    "    load_dotenv(override=True)\n",
+    "    \n",
+    "\n",
+    "def get_db_engine() -> Engine:\n",
+    "    \"\"\"Get or create database engine\"\"\"\n",
+    "    if st.session_state.db_engine is None:\n",
+    "        try:\n",
+    "            # Ensure .env is loaded before creating connection (check multiple locations)\n",
+    "            env_paths = [\n",
+    "                source_dir / \"utils\" / \".env\",  # Source/utils/.env\n",
+    "                app_dir / \"utils\" / \".env\",      # Source/app/utils/.env\n",
+    "                source_dir / \".env\"              # Source/.env\n",
+    "            ]\n",
+    "            \n",
+    "            env_loaded = False\n",
+    "            for env_path in env_paths:\n",
+    "                if env_path.exists():\n",
+    "                    load_dotenv(dotenv_path=str(env_path), override=True)\n",
+    "                    env_loaded = True\n",
+    "                    break\n",
+    "            \n",
+    "            if not env_loaded:\n",
+    "                load_dotenv(override=True)  # Try default location\n",
+    "            \n",
+    "            st.session_state.db_engine = create_connection_postgresql()\n",
+    "        except KeyError as e:\n",
+    "            # Provide helpful error message with possible locations\n",
+    "            possible_locations = [\n",
+    "                str(source_dir / \"utils\" / \".env\"),\n",
+    "                str(app_dir / \"utils\" / \".env\"),\n",
+    "                str(source_dir / \".env\")\n",
+    "            ]\n",
+    "            st.error(\n",
+    "                f\"Database connection error: Missing environment variable '{e}'. \"\n",
+    "                f\"Please check your .env file. Expected locations:\\n\"\n",
+    "                f\"- {possible_locations[0]}\\n\"\n",
+    "                f\"- {possible_locations[1]}\\n\"\n",
+    "                f\"- {possible_locations[2]}\"\n",
+    "            )\n",
+    "            return None\n",
+    "        except Exception as e:\n",
+    "            st.error(f\"Database connection error: {e}\")\n",
+    "            return None\n",
+    "    return st.session_state.db_engine\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5ccff58d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Successfully imported connection_engine\n",
+      "✅ Loaded .env from: C:\\Development\\python_projects\\Code\\projects\\baseball_analytics\\Sandbox\\.env\n",
+      "Connecting to database...\n",
+      "🛜  Connecting to the database...\n",
+      "   ✅ Database connection established.\n",
+      "✅ Database connection successful!\n",
+      "🔗 Connection test: Valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from sqlalchemy.engine import Engine\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# 1. HANDLE DIRECTORY PATHS (Notebook compatible)\n",
+    "try:\n",
+    "    # If running as a .py script\n",
+    "    base_path = Path(__file__).resolve().parent\n",
+    "except NameError:\n",
+    "    # If running in a Jupyter Notebook (.ipynb)\n",
+    "    base_path = Path(os.getcwd()).resolve()\n",
+    "\n",
+    "# Adjust these based on your actual folder structure\n",
+    "# Based on your previous code: Source/app/pages/...\n",
+    "app_dir = base_path \n",
+    "source_dir = app_dir.parent\n",
+    "sys.path.insert(0, str(source_dir))\n",
+    "\n",
+    "# 2. IMPORT DATABASE UTILS\n",
+    "# Note: Ensure connection_engine.py is in your source_dir\n",
+    "try:\n",
+    "    from connection_engine import create_connection_postgresql\n",
+    "    print(\"✅ Successfully imported connection_engine\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"❌ Import Error: {e}\")\n",
+    "    print(f\"Current sys.path: {sys.path[0]}\")\n",
+    "\n",
+    "# 3. LOAD ENVIRONMENT VARIABLES\n",
+    "env_paths = [\n",
+    "    source_dir / \"utils\" / \".env\",\n",
+    "    app_dir / \"utils\" / \".env\",\n",
+    "    source_dir / \".env\",\n",
+    "    base_path / \".env\"\n",
+    "]\n",
+    "\n",
+    "env_loaded = False\n",
+    "for env_path in env_paths:\n",
+    "    if env_path.exists():\n",
+    "        load_dotenv(dotenv_path=str(env_path), override=True)\n",
+    "        print(f\"✅ Loaded .env from: {env_path}\")\n",
+    "        env_loaded = True\n",
+    "        break\n",
+    "\n",
+    "if not env_loaded:\n",
+    "    print(\"⚠️ No .env file found in search paths. Falling back to default.\")\n",
+    "    load_dotenv(override=True)\n",
+    "\n",
+    "# 4. DATABASE ENGINE FUNCTION (Modified for Notebook testing)\n",
+    "# We use a global variable instead of st.session_state\n",
+    "_DB_ENGINE = None\n",
+    "\n",
+    "def get_db_engine() -> Engine:\n",
+    "    \"\"\"Get or create database engine (Notebook version)\"\"\"\n",
+    "    global _DB_ENGINE\n",
+    "    \n",
+    "    if _DB_ENGINE is None:\n",
+    "        try:\n",
+    "            print(\"Connecting to database...\")\n",
+    "            _DB_ENGINE = create_connection_postgresql()\n",
+    "            print(\"✅ Database connection successful!\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Database connection error: {e}\")\n",
+    "            return None\n",
+    "    return _DB_ENGINE\n",
+    "\n",
+    "# 5. TEST THE CONNECTION\n",
+    "if __name__ == \"__main__\":\n",
+    "    engine = get_db_engine()\n",
+    "    if engine:\n",
+    "        try:\n",
+    "            with engine.connect() as conn:\n",
+    "                print(\"🔗 Connection test: Valid\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Connection test failed: {e}\")"
+   ]
   }
  ],
  "metadata": {
