Test - .toml file

--- a/Code/projects/baseball_analytics/Sandbox/new_functions.ipynb
+++ b/Code/projects/baseball_analytics/Sandbox/new_functions.ipynb
@@ -415,6 +415,85 @@
     "print(\"--- National League West ---\")\n",
     "print(all_standings['National League West'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9411378c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsapi\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_division_standings_dfs():\n",
+    "    \"\"\"Fetches MLB standings, abbreviates team names, and formats for mobile.\"\"\"\n",
+    "    \n",
+    "    TEAM_ABBR = {\n",
+    "        'Arizona Diamondbacks': 'ARI', 'Atlanta Braves': 'ATL', 'Baltimore Orioles': 'BAL',\n",
+    "        'Boston Red Sox': 'BOS', 'Chicago White Sox': 'CWS', 'Chicago Cubs': 'CHC',\n",
+    "        'Cincinnati Reds': 'CIN', 'Cleveland Guardians': 'CLE', 'Colorado Rockies': 'COL',\n",
+    "        'Detroit Tigers': 'DET', 'Houston Astros': 'HOU', 'Kansas City Royals': 'KC',\n",
+    "        'Los Angeles Angels': 'LAA', 'Los Angeles Dodgers': 'LAD', 'Miami Marlins': 'MIA',\n",
+    "        'Milwaukee Brewers': 'MIL', 'Minnesota Twins': 'MIN', 'New York Mets': 'NYM',\n",
+    "        'New York Yankees': 'NYY', 'Athletics': 'ATH', 'Philadelphia Phillies': 'PHI',\n",
+    "        'Pittsburgh Pirates': 'PIT', 'San Diego Padres': 'SD', 'San Francisco Giants': 'SF',\n",
+    "        'Seattle Mariners': 'SEA', 'St. Louis Cardinals': 'STL', 'Tampa Bay Rays': 'TB',\n",
+    "        'Texas Rangers': 'TEX', 'Toronto Blue Jays': 'TOR', 'Washington Nationals': 'WSH'\n",
+    "    }\n",
+    "\n",
+    "    # leagueId 103 is AL, 104 is NL\n",
+    "    standings_raw = statsapi.standings_data(leagueId=\"103,104\")\n",
+    "    division_dict = {}\n",
+    "\n",
+    "    for division_id in standings_raw:\n",
+    "        div_name = standings_raw[division_id]['div_name']\n",
+    "        teams_list = standings_raw[division_id]['teams']\n",
+    "        \n",
+    "        df = pd.DataFrame(teams_list)\n",
+    "        \n",
+    "        # Abbreviate names to save horizontal space\n",
+    "        df['name'] = df['name'].map(TEAM_ABBR).fillna(df['name'])\n",
+    "        \n",
+    "        # Calculate PCT and format as .XXX (MLB Style)\n",
+    "        df['W%'] = df['w'] / (df['w'] + df['l']).replace(0, 1)\n",
+    "        df['W%'] = df['W%'].apply(lambda x: '{:.3f}'.format(x).lstrip('0'))\n",
+    "        # cols = ['name', 'w', 'l', 'gb', 'div_rank', 'wc_gb', 'wc_rank', 'league_rank']\n",
+    "        \n",
+    "        # Map raw fields to clean display names\n",
+    "        cols_map = {\n",
+    "            'name': 'TM',\n",
+    "            'w': 'W',\n",
+    "            'l': 'L',\n",
+    "            'W%': 'PCT',\n",
+    "            'gb': 'GB',\n",
+    "            'wc_gb': 'WCGB',\n",
+    "            'league_rank': 'LG RNK'\n",
+    "        }\n",
+    "        \n",
+    "        df = df[list(cols_map.keys())].rename(columns=cols_map)\n",
+    "        division_dict[div_name] = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8220c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_standings = get_division_standings_dfs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "08922795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standings_raw = statsapi.standings_data(leagueId=\"103,104\", season=2025)"
+   ]
   }
  ],
  "metadata": {
